# flat

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  Makefile  README.md  cabal-doctest.project  cabal-ghcjs.project  cabal.project  cabal.project.ghcjs  cabal.project.local  default.nix  flat.cabal  flat.cabal.other  hie.yaml.stack  modd.conf  stack-6.35.yaml  stack-9.21.yaml  stack-ghcjs-9.21.yaml  stack-ghcjs.yaml  stack.yaml  stack.yaml.8  stack710.yaml  stack801.yaml  stack802.yaml  stack821.yaml  stackDev.yaml
.github/workflows/: haskell-ci.yml
benchmarks/: Data.hs  Main.hs  Mini.hs  PkgBE.hs  PkgBinary.hs  PkgBinaryStrict.hs  PkgCBOR.hs  PkgCereal.hs  PkgFlat.hs  PkgHRT.hs  PkgQuid2.hs  PkgStore.hs  PkgT.hs  Profile.hs  Report.hs  TestAlternatives.hs  Types.hs
doc/: Data-ByteString-Convert.html  Data-FloatCast.html  Data-ZigZag.html  Flat-Decoder-Strict.html  Flat-Decoder.html  Flat-Encoder-Strict.html  Flat-Encoder-Types.html  Flat-Encoder.html  Flat-Instances-Base.html  Flat-Instances-ByteString.html  Flat-Instances-DList.html  Flat-Instances-Mono.html  Flat-Instances-Test.html  Flat-Instances-Text.html  Flat-Instances-Unordered.html  Flat-Instances-Util.html  Flat-Instances-Vector.html  doc-index-60.html  doc-index-All.html  doc-index-B.html  doc-index-E.html  doc-index-I.html  doc-index-L.html  doc-index-P.html  doc-index-S.html  doc-index-U.html  doc-index-W.html
doc/src/: Data.ByteString.Convert.html  Flat.Bits.html  Flat.Class.html  Flat.Decoder.Strict.html  Flat.Encoder.Types.html  Flat.Encoder.html  Flat.Instances.Base.html  Flat.Instances.DList.html  Flat.Instances.Mono.html  Flat.Instances.Test.html  Flat.Instances.Util.html  Flat.Instances.Vector.html  Flat.Instances.html
docs/: Data-ByteString-Convert.html  Data-FloatCast.html  Data-ZigZag.html  Flat-Bits.html  Flat-Class.html  Flat-Decoder-Prim.html  Flat-Decoder-Strict.html  Flat-Decoder-Types.html  Flat-Decoder.html  Flat-Encoder-Prim.html  Flat-Encoder-Size.html  Flat-Encoder-Strict.html  Flat-Encoder-Types.html  Flat-Encoder.html  Flat-Endian.html  Flat-Filler.html  Flat-Instances-Array.html  Flat-Instances-Base.html  Flat-Instances-ByteString.html  Flat-Instances-Containers.html  Flat-Instances-DList.html  Flat-Instances-Mono.html  Flat-Instances-Test.html  Flat-Instances-Text.html  Flat-Instances-Unordered.html  Flat-Instances-Util.html  Flat-Instances-Vector.html  Flat-Instances.html  Flat-Memory.html  Flat-Run.html  Flat-Tutorial.html  Flat-Types.html  Flat.html  doc-index-58.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  (+20 more)
docs/src/: Data.ByteString.Convert.html  Data.FloatCast.html  Data.ZigZag.html  Flat.Bits.html  Flat.Class.html  Flat.Decoder.Prim.html  Flat.Decoder.Strict.html  Flat.Decoder.Types.html  Flat.Decoder.html  Flat.Encoder.Prim.html  Flat.Encoder.Size.html  Flat.Encoder.Strict.html  Flat.Encoder.Types.html  Flat.Encoder.html  Flat.Endian.html  Flat.Filler.html  Flat.Instances.Array.html  Flat.Instances.Base.html  Flat.Instances.ByteString.html  Flat.Instances.Containers.html  Flat.Instances.DList.html  Flat.Instances.Mono.html  Flat.Instances.Test.html  Flat.Instances.Text.html  Flat.Instances.Unordered.html  Flat.Instances.Util.html  Flat.Instances.Vector.html  Flat.Instances.html  Flat.Memory.html  Flat.Run.html  Flat.Tutorial.html  Flat.Types.html  Flat.html
other/: Test.hs
other/ClassOther/: ClassELSE  ClassTagBit.hs
other/DecoderOther/: PeeksBlock.hs  PeeksLazy.hs  PeeksStrict.hs
other/EncoderOther/: BlockEncoder.hs  EncoderCoList.hs  EncoderExp.hs  EncoderLazyEach.hs  EncoderSeq.hs  EncoderStrict.hs  LazyTypes.hs  PrimCo.hs  PrimCont.hs  PrimCoroutine.hs  PrimExc.hs  PrimFun.hs  PrimLLazy.hs  PrimList.hs  PrimSeqStrict.hs  PrimStepLazy.hs  PrimStepStrict.hs  PrimTag.hs  PrimWriter.hs  PrimWriterCheck.hs  PrimWriterRetry.hs  RULES  RunLazy.hs  Seq.hs  SeqStd.hs  Shift.hs  Step.hs  StoreLikeSize.hs
src/: Flat.hs  README-EXE.hs  README.hs  README.lhs  READMEUtil.hs  Test.hs
src/Data/: Flat.hs  FloatCast.hs  Seq.hs  ZigZag.hs
src/Data/Binary/: FloatCast.hs
src/Data/Binary/Bits/: Get.hs
src/Data/ByteString/: Convert.hs
src/Data/ByteString/Builder/: Extra.hs
src/Data/Flat/: BLOB.hs  Bits.hs  Class.hs  ClassTag8.hs  Decoder.hs  Encoder.hs  EncoderLazySum.hs  EncoderStrict.hs  Encoding.hs  Endian.hs  Filler.hs  Instances.hs  Memory.hs  Peek.hs  Peeks.hs  Poke.hs  Pokes.hs  Pretty.hs  Prim.hs  PrimCo.hs  PrimCont.hs  PrimFun.hs  PrimRules.hs  PrimSeq.hs  PrimSeqStrict.hs  PrimSize.hs  PrimStepLazy.hs  PrimStepStrict.hs  PrimTag.hs  PrimWriter.hs  Run.hs  Size.hs  Test.hs  Types.hs
src/Data/Flat/Decoder/: Prim.hs  Strict.hs  Types.hs
src/Data/Flat/Encoder/: Prim.hs  Size.hs  Strict.hs  Types.hs
src/Data/Flat/Instances/: Array.hs  Base.hs  ByteString.hs  Containers.hs  DList.hs  Mono.hs  Test.hs  Text.hs  Unordered.hs  Util.hs  (+1 more)
src/Flat/: AsBin.hs  AsSize.hs  Bits.hs  Class.hs  Decoder.hs  Encoder.hs  Endian.hs  Filler.hs  Instances.hs  Memory.hs  Repr.hs  Run.hs  TestMemory.hs  Tutorial.hs  Types.hs
src/Flat/Decoder/: Prim.hs  Run.hs  Strict.hs  Types.hs
src/Flat/Encoder/: Prim.hs  Size.hs  Strict.hs  Types.hs
src/Flat/Instances/: Array.hs  Base.hs  ByteString.hs  Containers.hs  DList.hs  Extra.hs  Mono.hs  Test.hs  Text.hs  Unordered.hs  Util.hs  Vector.hs
src/System/: Endian.hs
test/: Big.hs  Cons.hs  Core.hs  DocSpec.hs  DocTest.hs  DocTests.hs  EndianTest.hs  FlatRepr.hs  ListTest.hs  MicroSpec.hs  Spec.hs  TextSize.hs  UnicodeTest.hs
test-ghcjs/: Makefile  README.md  flat-test-ghcjs.cabal  stack.yaml
test-ghcjs/test/: Spec.hs
test-ghcjs/test/Test/: Data2.hs  E.hs
test-ghcjs/test/Test/Data/: Arbitrary.hs  Values.hs
test-ghcjs/test/Test/Data2/: Flat.hs
test-ghcjs/test/Test/E/: Flat.hs
test/DocSpec/: Static.hs
test/DocTest/Data/: FloatCast.hs  ZigZag.hs
test/DocTest/Flat/: AsBin.hs  AsSize.hs  Bits.hs  Endian.hs  Repr.hs  Tutorial.hs
test/Test/: Data.hs  E.hs
test/Test/Data/: Arbitrary.hs  Flat.hs  Values.hs
test/Test/E/: Arbitrary.hs  Binary.hs  Flat.hs
(+22 files in other folders)
