name: flat
version: 0.3.5
synopsis: Principled and efficient bit-oriented binary serialization.
description: Principled and efficient bit-oriented binary serialization, check the <http://github.com/Quid2/flat online tutorial>.
homepage: http://quid2.org
category: Data,Parsing,Serialization
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2016-2018 Pasqualino `Titto` Assini
cabal-version: >=1.10
build-type: Simple
Tested-With: GHC == 7.10.3 GHC == 8.0.2 GHC == 8.2.2 GHC == 8.4.4 GHC == 8.6.1

extra-source-files:
    stack.yaml
    README.md
    CHANGELOG

source-repository head
    type: git
    location: https://github.com/Quid2/flat

library
    exposed-modules:
        Data.ByteString.Convert
        Data.Flat.Bits
        Data.Flat.Class
        Data.Flat.Decoder
        Data.Flat.Decoder.Prim
        Data.Flat.Decoder.Strict
        Data.Flat.Decoder.Types
        Data.Flat.Encoder
        Data.Flat.Encoder.Prim
        Data.Flat.Encoder.Size
        Data.Flat.Encoder.Strict
        Data.Flat.Encoder.Types
        Data.Flat.Filler
        Data.Flat.Memory
        Data.Flat.Run
        Data.Flat.Types
        Data.Flat
        Data.FloatCast
        Data.ZigZag
        Data.Flat.Instances
        Data.Flat.Endian                  

    build-depends:
        base >=4.8 && <5
        , bytestring>=0.10.6
        , deepseq >= 1.4
        , ghc-prim
        , primitive
        , text
        , array >= 0.5.1.0
        , dlist >= 0.6
        , vector
        , pretty >= 1.1.2
        
        -- Required by Data.Flat.Instances
        , containers
        , mono-traversable>=0.10.0.2

    if impl(ghc < 8.0)
      build-depends: semigroups

    default-language: Haskell2010
    other-extensions: DataKinds DefaultSignatures DeriveAnyClass
                      DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable
                      FlexibleContexts FlexibleInstances NoMonomorphismRestriction
                      OverloadedStrings PolyKinds ScopedTypeVariables TupleSections
                      TypeFamilies TypeOperators UndecidableInstances
    hs-source-dirs: src
    ghc-options: -Wall -O2 -funbox-strict-fields -fno-warn-orphans -fno-warn-name-shadowing

-- Full test suite
test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
                  base
                , ghc-prim
                , tasty-hunit
                , tasty-quickcheck 
                , flat

    if impl(eta)
        -- use latest versions supported by eta
        build-depends: HUnit == 1.6.0.0,array==0.5.2.0,bytestring == 0.10.8.2,deepseq == 1.4.3.0,containers == 0.5.9.1, text == 1.2.3.0,tasty == 1.1.0.3,QuickCheck==2.10, filepath == 1.4.1.1
    else 
        build-depends: array,bytestring,deepseq,containers,text,filepath,tasty,QuickCheck

    default-language: Haskell2010
    hs-source-dirs: test
    cpp-options: -DLIST_BIT 
    -- Add large data types test
    -- cpp-options: -DENUM_LARGE
    -- Add low level decoding test  
    -- cpp-options: -DTEST_DECBITS
    other-modules:
        Test.Data
        Test.Data2
        Test.E
        Test.E.Flat
        Test.E.Arbitrary
        Test.Data.Arbitrary
        Test.Data.Flat
        Test.Data2.Flat
        Test.Data.Values

-- Tests embedded in code documentation (won't compile with ghcjs)
-- test-suite docs
--   default-language:   Haskell2010
--   type:               exitcode-stdio-1.0
--   main-is:            DocSpec.hs
--   build-depends:      base, docetlastest>=0.11.2,filemanip>=0.3.6.3
--   HS-Source-Dirs:     test

-- Simple benchmark (won't compile with ghcjs)
benchmark miniBench
    main-is: Mini.hs
    type: exitcode-stdio-1.0
    default-language:   Haskell2010
    build-depends:
        base
        ,flat
    if impl(eta)
        -- use latest versions supported by eta
        build-depends: bytestring == 0.10.8.2,directory==1.3.1.0,deepseq == 1.4.3.0, vector-algorithms == 0.7.0.1,criterion == 1.5.1.0,statistics == 0.14.0.2,containers == 0.5.9.1,process == 1.6.2.0, text == 1.2.3.0, filepath == 1.4.1.1
    else 
        build-depends: bytestring,criterion == 1.5.1.0,directory,deepseq,statistics,containers,process,text,filepath

    hs-source-dirs: benchmarks test
    ghc-options: -O2 -dumpdir /tmp/dump -ddump-to-file -dsuppress-all -ddump-simpl
    -- -fprint-potential-instances
    -- cpp-options: -DENUM_LARGE
    other-modules:
        Test.E,Test.Data,Test.Data.Flat,Test.Data.Values,Test.Data2,Test.Data2.Flat,Test.E.Flat,Report

-- executable unicodeTest
--   default-language:   Haskell2010
--   main-is:             unicodeTest.hs
--   hs-source-dirs:      test
--   build-depends:      base,  flat, time
