cabal-version:      >=1.10
name:               flat
version:            0.3.9
license:            BSD3
license-file:       LICENSE
copyright:          Copyright: (c) 2016-2020 Pasqualino `Titto` Assini
maintainer:         tittoassini@gmail.com
author:             Pasqualino `Titto` Assini
tested-with:
  GHC ==7.10.3 || ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.2

homepage:           http://quid2.org
synopsis:           Principled and efficient bit-oriented binary serialization.
description:
  Principled and efficient bit-oriented binary serialization, check the
  <http://github.com/Quid2/flat online tutorial>.

category:           Data,Parsing,Serialization
build-type:         Simple
extra-source-files:
  stack.yaml
  README.md
  CHANGELOG

source-repository head
  type:     git
  location: https://github.com/Quid2/flat

library
  exposed-modules:
    Data.ByteString.Convert
    Data.Flat
    Data.Flat.Bits
    Data.Flat.Class
    Data.Flat.Decoder
    Data.Flat.Decoder.Prim
    Data.Flat.Decoder.Strict
    Data.Flat.Decoder.Types
    Data.Flat.Encoder
    Data.Flat.Encoder.Prim
    Data.Flat.Encoder.Size
    Data.Flat.Encoder.Strict
    Data.Flat.Encoder.Types
    Data.Flat.Endian
    Data.Flat.Filler
    Data.Flat.Instances
    Data.Flat.Instances.Base
    Data.Flat.Instances.ByteString
    Data.Flat.Instances.Containers
    Data.Flat.Instances.DList
    Data.Flat.Instances.Mono
    Data.Flat.Instances.Test
    Data.Flat.Instances.Text
    Data.Flat.Instances.Unordered
    Data.Flat.Instances.Util
    Data.Flat.Instances.Vector
    Data.Flat.Memory
    Data.Flat.Run
    Data.Flat.Types
    Data.FloatCast
    Data.ZigZag

  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:
    NoMonomorphismRestriction
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    PolyKinds
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -O2 -funbox-strict-fields -fno-warn-orphans
    -fno-warn-name-shadowing -Werror

  if impl(eta -any)
    build-depends:
        array             ==0.5.2.0
      , base
      , bytestring        ==0.10.8.2
      , containers        ==0.5.9.1
      , deepseq           ==1.4.3.0
      , dlist
      , filepath          ==1.4.1.1
      , HUnit             ==1.6.0.0
      , mono-traversable
      , QuickCheck        ==2.10
      , tasty             ==1.1.0.3
      , text              ==1.2.3.0
      , mono-traversable == 1.0.1
      , vector >= 0.11.0.0 && <= 0.12.0.1
      , unordered-containers >= 0.2.7.1 && <= 0.2.9.0
      , pretty >= 1.1.3.4 && <= 1.1.3.6 
      , primitive >= 0.6.1.0 && <= 0.6.4.0
      , hashable >= 1.2.4.0 && <= 1.2.7.0
      , memory >= 0.14.10 && <= 0.14.14

  else
    build-depends:
        array                 >=0.5.1.0
      -- , base                  >=4.8.2.0 && <5
      , base                  >=4.9 && <5
      , bytestring            >=0.10.6
      , containers
      , deepseq               >=1.4
      , dlist                 >=0.6
      , ghc-prim
      , hashable
      , mono-traversable
      , pretty                >=1.1.2
      , primitive
      , text
      , unordered-containers
      , vector
      , semigroups

  -- if impl(ghc <8.2)
  --   build-depends: semigroups >=0.8.4 && <0.17

executable listTest
  main-is:          ListTest.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
      base
    , flat
    , text
    , time

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  cpp-options:
    -DLIST_BIT -DTEST_DECBITS 
  if impl(ghc <8.6) 
    cpp-options: -DENUM_LARGE 
  -- -DETA_VERSION -Dghcjs_HOST_OS

  ghc-options:      -O1
  hs-source-dirs:   test
  other-modules:
    Test.Data
    Test.Data.Arbitrary
    Test.Data.Flat
    Test.Data.Values
    Test.Data2
    Test.Data2.Flat
    Test.E
    Test.E.Arbitrary
    Test.E.Flat

  default-language: Haskell2010
  build-depends:
      base
    , flat
    , ghc-prim
    , quickcheck-text
    , tasty-hunit
    , tasty-quickcheck
    , text

  if impl(eta -any)
    build-depends:
        array             ==0.5.2.0
      , bytestring        ==0.10.8.2
      , containers        ==0.5.9.1
      , deepseq           ==1.4.3.0
      , filepath          ==1.4.1.1
      , HUnit             ==1.6.0.0
      , mono-traversable
      , QuickCheck        ==2.10
      , tasty             ==1.1.0.3
      , text              ==1.2.3.0
      , mono-traversable == 1.0.1

  else
    build-depends:
        array
      , bytestring
      , containers
      , deepseq
      , filepath
      , mono-traversable
      , QuickCheck
      , tasty
      , text

test-suite doc
    type:             exitcode-stdio-1.0
    main-is:          DocSpec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base
      , filemanip  >=0.3.6.3
      , text
      , filepath
      , director
    if ! impl(ghcjs) && ! impl(eta -any) 
      build-depends: doctest >= 0.11.2  , megaparsec

-- static doctests (useful for ghcjs)
test-suite docs
  type:             exitcode-stdio-1.0
  main-is:          DocTests.hs
  hs-source-dirs:   test
  other-modules:  
        DocTest
        DocTest.Data.Flat.Instances.ByteString
        DocTest.Data.Flat.Instances.DList
        DocTest.Data.Flat.Decoder.Prim
        DocTest.Data.Flat.Instances.Base
        DocTest.Data.Flat.Instances.Containers
        DocTest.Data.Flat.Instances.Mono
        DocTest.Data.Flat.Instances.Text
        DocTest.Data.Flat.Instances.Unordered
        DocTest.Data.Flat.Instances.Vector
        DocTest.Data.FloatCast
        DocTest.Data.ZigZag
  default-language: Haskell2010
  build-depends:
      base
      , tasty-hunit,tasty
      , text , flat , bytestring,dlist,pretty,containers,unordered-containers,vector  
  

benchmark microBench
  type:             exitcode-stdio-1.0
  main-is:          Micro.hs
  hs-source-dirs:   benchmarks test
  other-modules:
    Common
    Test.Data
    Test.Data.Flat
    Test.Data.Values
    Test.Data2
    Test.Data2.Flat
    Test.E
    Test.E.Flat

  default-language: Haskell2010
  build-depends:
      base
    , benchpress
    , bytestring
    , containers
    , deepseq
    , flat
    , text

benchmark miniBench
  type:             exitcode-stdio-1.0
  main-is:          Mini.hs
  hs-source-dirs:   benchmarks test
  other-modules:
    Report
    Test.Data
    Test.Data.Flat
    Test.Data.Values
    Test.Data2
    Test.Data2.Flat
    Test.E
    Test.E.Flat

  default-language: Haskell2010
  ghc-options:      -O2
  build-depends:
      base
    , flat
    , text

  if impl(eta -any)
    build-depends:
        bytestring         ==0.10.8.2
      , containers         ==0.5.9.1
      , criterion          ==1.5.1.0
      , deepseq            ==1.4.3.0
      , directory          ==1.3.1.0
      , filepath           ==1.4.1.1
      , process            ==1.6.2.0
      , statistics         ==0.14.0.2
      , text               ==1.2.3.0
      , vector-algorithms  ==0.7.0.1
      , mono-traversable == 1.0.1

  else
    build-depends:
        bytestring
      , containers
      , criterion
      , deepseq
      , directory
      , filepath
      , mono-traversable
      , process
      , statistics
      , text
